<resources>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_text1">Activate code</string>
    <string name="about_text2">Version</string>
    <string name="about_text3">Disclaimer：</string>
    <string name="about_text4">Once you use this software, you are willing to accept the following term.</string>
    <string name="about_text5">1. You agree to do your most to prevent and protect the unauthorized publication and use of this program and its contents, our company reserves all the rights not expressly stated.</string>
    <string name="about_text6">2. It is forbidden to use this software to distribute the video or information in violation of national laws and regulations. If violated, our enterprise will not be responsible for it nor take any legal responsibility.</string>
    <string name="about_text7">3. The software can not be deleted or changed in any distribution, the software is forbidden for any kind of commercial use.</string>
    <string name="about_text8">If you find a violation or use it to post a video or information that is in violation of national laws and regulations, contact your service provider.</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Goat TV</string>
    <string name="back">Quit</string>
    <string name="back2">Return</string>
    <string name="backlist_text1">Program List</string>
    <string name="backlist_text2">Program Forecast</string>
    <string name="backlist_text3">no program forecast data</string>
    <string name="cancel">Cancel</string>
    <string name="collect_text1">Collection succeed</string>
    <string name="collect_text2">the Collection already exists</string>
    <string name="collect_text3">Collection</string>
    <string name="decode_text1">Hardware decoding,Poor compatibility,higher video quality,recommended for STB or MID</string>
    <string name="decode_text2">Software decoding for VLC, Good compatibility,power saving,recommended for mobile phones</string>
    <string name="decode_text3">Decoding options</string>
    <string name="decode_text4">Software decoding for FFMPEG, Good compatibility,power saving,recommended for mobile phones</string>
    <string name="decode_text5">Hardware decoding for EXOPLAYER,higher video quality,recommended for STB or MID</string>
    <string name="del">Delete</string>
    <string name="error_text1">error1：获取程序路径失败</string>
    <string name="error_text2">error2：动态库加载失败</string>
    <string name="error_text3">error3：动态库加载目录失败</string>
    <string name="feedback_text1">Problem feedback</string>
    <string name="feedback_text2">Select the type of problem you encountered</string>
    <string name="feedback_text3">SmoothVideo Project</string>
    <string name="feedback_text4">Video load failed</string>
    <string name="feedback_text5">Poor image quality</string>
    <string name="feedback_text6">Audio and video synchronization</string>
    <string name="friday">Friday</string>
    <string name="hello_world">Hello world!</string>
    <string name="infoview_text1">no program forecast data</string>
    <string name="infoview_text2">Rewind</string>
    <string name="infoview_text3">Forward</string>
    <string name="isexit">Click BACK again to quit</string>
    <string name="livecollect_text1">do you want to remove collection?</string>
    <string name="liveline_text1">Route</string>
    <string name="liveline_text2">High video quality</string>
    <string name="liveline_text3">Normal video quality</string>
    <string name="liveplayer_text1">In playing</string>
    <string name="liveplayer_text10">Video Error</string>
    <string name="liveplayer_text11">Playlist</string>
    <string name="liveplayer_text12">Exiting</string>
    <string name="liveplayer_text13">Decode</string>
    <string name="liveplayer_text2">Program list</string>
    <string name="liveplayer_text3">Forecast List</string>
    <string name="liveplayer_text4">Classification</string>
    <string name="liveplayer_text5">Replay</string>
    <string name="liveplayer_text6">Channel does not exist</string>
    <string name="liveplayer_text7">Tip</string>
    <string name="liveplayer_text8">You have been watching for 8 hours, for your health, please rest for a while</string>
    <string name="liveplayer_text9">Line</string>
    <string name="livescroll_text1">right button to display program guide</string>
    <string name="livescroll_text2">left button to display program classification</string>
    <string name="livescroll_text3">Long press to display program settings</string>
    <string name="livesetting_text1">Collection</string>
    <string name="livesetting_text2">Route</string>
    <string name="loadlibsview_text1">The plug-in is being downloaded</string>
    <string name="loadlibsview_text2">Please restart the application</string>
    <string name="login_text1">User</string>
    <string name="login_text2">Password</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="menu">Menu</string>
    <string name="menu_text1">Configure</string>
    <string name="menu_text10">Please reboot</string>
    <string name="menu_text11">Feedback</string>
    <string name="menu_text12">Switching</string>
    <string name="menu_text2">Decode</string>
    <string name="menu_text3">Upgrade</string>
    <string name="menu_text4">System</string>
    <string name="menu_text5">Font</string>
    <string name="menu_text6">About</string>
    <string name="menu_text7">Quit</string>
    <string name="menu_text8">App</string>
    <string name="menu_text9">Number</string>
    <string name="mgplayer_text1">Authentication failed, please connect to the Internet for authentication</string>
    <string name="mgplayer_text2">Being connected to the Internet for certification, please ensure that the network is normal</string>
    <string name="monday">Monday</string>
    <string name="myhomebar_text1">LiveTV</string>
    <string name="myhomebar_text10">Application</string>
    <string name="myhomebar_text11">Tip</string>
    <string name="myhomebar_text12">Do you want to download the application？</string>
    <string name="myhomebar_text13">Downloading applications</string>
    <string name="myhomebar_text2">VOD</string>
    <string name="myhomebar_text3">Replay</string>
    <string name="myhomebar_text4">Settings</string>
    <string name="myhomebar_text5">Quit</string>
    <string name="myhomebar_text6">do you want quit the program?</string>
    <string name="myhomebar_text7">remain</string>
    <string name="myhomebar_text8">day</string>
    <string name="myhomebar_text9">forever</string>
    <string name="ok">Confirm</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="playerinfo_text1">Play</string>
    <string name="playerinfo_text10">Star</string>
    <string name="playerinfo_text11">Synopsis</string>
    <string name="playerinfo_text12">No.</string>
    <string name="playerinfo_text13">Episode</string>
    <string name="playerinfo_text14">Total</string>
    <string name="playerinfo_text2">Selections</string>
    <string name="playerinfo_text3">Collection</string>
    <string name="playerinfo_text4">Return</string>
    <string name="playerinfo_text5">Area</string>
    <string name="playerinfo_text6">Year</string>
    <string name="playerinfo_text7">Hot</string>
    <string name="playerinfo_text8">Type</string>
    <string name="playerinfo_text9">Update</string>
    <string name="preview_text1">Could not find the video,play failed</string>
    <string name="preview_text2">Not to the time,can not play</string>
    <string name="saturday">Saturday</string>
    <string name="search_menu_title">Search</string>
    <string name="serverset_text1">Server address setting</string>
    <string name="serverset_text2">Configure</string>
    <string name="setwebview_text1">Please Wait!</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="timeout">Time out</string>
    <string name="tuesday">Tuesday</string>
    <string name="typelist_text1">All</string>
    <string name="typelist_text2">Plz enter password</string>
    <string name="typelist_text3">Password error</string>
    <string name="typelist_text4">Collection</string>
    <string name="typelist_text5">Find</string>
    <string name="unbundling_text1">Service code</string>
    <string name="unbundling_text6">Unbinding</string>
    <string name="unbundling_text7">Working code</string>
    <string name="unbundling_text8">Status</string>
    <string name="vodfind_text1">Sort</string>
    <string name="vodfind_text10">Confirm</string>
    <string name="vodfind_text3">Search</string>
    <string name="vodfind_text7">Type</string>
    <string name="vodfind_text8">Time</string>
    <string name="vodfind_text9">Area</string>
</resources>