<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <RadioGroup n1:orientation="vertical" n1:id="@id/RadioGroup" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_margin="15.0dip">
        <RadioButton n1:id="@id/RadioDecode1" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/decode_text1" />
        <RadioButton n1:id="@id/RadioDecode4" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/decode_text5" />
        <RadioButton n1:id="@id/RadioDecode2" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/decode_text2" />
        <RadioButton n1:id="@id/RadioDecode3" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/decode_text4" />
    </RadioGroup>
</LinearLayout>