<?xml version="1.0" encoding="utf-8"?>
<FrameLayout n1:background="@mipmap/homeblade" n1:layout_width="fill_parent" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:gravity="center_horizontal" n1:layout_gravity="center" n1:orientation="horizontal" n1:id="@id/layout" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <TextView n1:gravity="center" n1:layout_gravity="center_horizontal" n1:id="@id/t1" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/myhomebar_text1" n1:layout_weight="0.2" />
        <TextView n1:gravity="center" n1:layout_gravity="center_horizontal" n1:id="@id/t2" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/myhomebar_text2" n1:layout_weight="0.2" />
        <TextView n1:gravity="center" n1:layout_gravity="center_horizontal" n1:id="@id/t3" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/myhomebar_text3" n1:layout_weight="0.2" />
        <TextView n1:gravity="center" n1:layout_gravity="center_horizontal" n1:id="@id/t4" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/myhomebar_text4" n1:layout_weight="0.2" />
        <TextView n1:gravity="center" n1:layout_gravity="center_horizontal" n1:id="@id/t5" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/myhomebar_text5" n1:layout_weight="0.2" />
    </LinearLayout>
</FrameLayout>